--- a/src/main/resources/templates/site/info.html
+++ b/src/main/resources/templates/site/info.html
@@ -57,7 +57,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Welcome, <span class="caret" th:text="${site.siteName}"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../account/index.html" th:href="@{../logout}">Sign out</a></li>
+                        <li><a href="../site/login.html" th:href="@{../logout}">Sign out</a></li>
                         <!--<li><a href="../account/register.html" th:href="@{../register}">Register</a></li>-->
                     </ul>
                 </li>
