--- a/src/main/resources/templates/site/plansShow.html
+++ b/src/main/resources/templates/site/plansShow.html
@@ -52,7 +52,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Welcome, <span class="caret" th:text="${site.siteName} <span class="caret"></span></a>
+                       aria-expanded="false">Welcome, <span class="caret" th:text="${siteID}"></span> </span></a>
                     <ul class="dropdown-menu">
                         <li><a href="../user/index.html" th:href="@{../logout}">Sign out</a></li>
                         <!--<li><a href="../user/register.html" th:href="@{../register}">Register</a></li>-->
