finish buyOnline ,doing manager

--- a/src/main/resources/templates/site/statistics.html
+++ b/src/main/resources/templates/site/statistics.html
@@ -24,23 +24,27 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html" th:href="@{index}">Hostel World</a>
+            <a class="navbar-brand" href="info.html" th:href="@{info}">Tickets</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="index.html" th:href="@{index}">Hotel Status<span
-                        class="sr-only">(current)</span></a></li>
-                <li><a href="buyOffline.html" th:href="@{record}">Live Records</a></li>
-                <li><a href="info.html" th:href="@{info}">Hotel Info</a></li>
-                <li  class="active"><a href="statistics.html" th:href="@{statistics}">Statistics</a></li>
+                <li><a href="info.html" th:href="@{info}">场馆信息</a></li>
+
+                <li><a href="plansShow.html" th:href="@{plansShow}">活动一览</a></li>
+
+                <li><a href="addPlan.html" th:href="@{addPlan}">申请活动</a></li>
+
+                <li><a href="buyOffline.html" th:href="@{buyOffline}">现场购票</a></li>
+
+                <li  class="active"><a href="statistics.html" th:href="@{statistics}">数据统计</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Welcome, Smith <span class="caret"></span></a>
+                       aria-expanded="false">Welcome, <span class="caret" th:text="${siteID}"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="../account/index.html" th:href="@{../logout}">Sign out</a></li>
                         <li><a href="../account/register.html" th:href="@{../register}">Register</a></li>
@@ -54,50 +58,53 @@
 
 <div class="mainpage">
 
-    <h2> Recent Record Status</h2>
+    <h2> 近期场馆预订数</h2>
     <div id="reserved" style="width: 600px;height:400px;"></div>
 
-    <h2> Recent Live Status</h2>
-    <div id="live" style="width: 600px;height:400px;"></div>
+    <h2> 近期场馆退订数</h2>
+    <div id="cancel" style="width: 600px;height:400px;"></div>
 
-    <h2> Recent Consumption Status</h2>
+    <h2> 支付手段占比</h2>
     <div id="consumption" style="width: 600px;height:400px;"></div>
     <div class="err-msg"></div>
 </div>
 
-<div th:include="footer :: copy"></div>
 
 
 <!--Scripts-->
 <script src="../../static/js/jquery-3.1.1.min.js" th:src="@{/js/jquery-3.1.1.min.js}"></script>
 <script src="../../static/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 <script type="text/javascript" th:inline="javascript">
+
     var reservedChart = echarts.init(document.getElementById('reserved'));
-    var liveChart = echarts.init(document.getElementById('live'));
+//    var liveChart = echarts.init(document.getElementById('live'));
+    var cancelChart = echarts.init(document.getElementById('cancel'));
     var consumptionChart = echarts.init(document.getElementById('consumption'));
+
     var newData = {};
     // 指定图表的配置项和数据
     var reservedOption = {
         title: {
-            text: 'Reserved Status'
+            text: '预订数'
         },
         tooltip: {},
 
         xAxis: {
-            data: ["12-7","12-8","12-9","12-10","12-11","12-12"]
+            data: ["3-25","3-26","3-27","3-28","3-29","3-30"]
         },
         yAxis: {
             name: 'Number'
         },
         series: [{
-            name: 'Reserved Number',
+            name: '预订数',
             type: 'bar',
             data: [5, 20,20, 10, 10, 20]
         }]
     };
     reservedChart.setOption(reservedOption);
+
     $.ajax({
-        url: '/hotel/reservedStatus',
+        url: '/site/recentIncome',
         data: '',
         dataType: 'json',
         success: function (data) {
@@ -106,7 +113,7 @@
                 newData = data.data;
                 reservedOption.xAxis.data = Object.keys(newData);
                 reservedOption.series[0].data = Object.keys(newData).map(function(k) { return newData[k] });
-//                console.log(reservedOption);
+                console.log(reservedOption);
             } else {
                 var error_msg = '<p class="errtip">	<strong>Error</strong>：' + data.reason + '</p>';
                 $(".err-msg").html(error_msg);
@@ -116,44 +123,49 @@
 
     });
 
-    var liveOption = {
+
+    var cancelOption = {
         title: {
-            text: 'Live Status'
+            text: '退订数'
         },
         tooltip: {},
 
         xAxis: {
-            data: ["12-7","12-8","12-9","12-10","12-11","12-12"]
+            data: ["3-25","3-26","3-27","3-28","3-29","3-30"]
         },
         yAxis: {
             name: 'Number'
         },
         series: [{
-            name: 'Lived Number',
+            name: '退订数',
             type: 'bar',
             data: [5, 20,20, 10, 10, 20]
         }]
     };
-    liveChart.setOption(liveOption);
+    cancelChart.setOption(cancelOption);
+
     $.ajax({
-        url: '/hotel/liveStatus',
+        url: '/site/cancelStatistics',
         data: '',
         dataType: 'json',
         success: function (data) {
             console.log(data);
             if (data.result) {
                 newData = data.data;
-                liveOption.xAxis.data = Object.keys(newData);
-                liveOption.series[0].data = Object.keys(newData).map(function(k) { return newData[k] });
-//                console.log(reservedOption);
+                cancelOption.xAxis.data = Object.keys(newData);
+                cancelOption.series[0].data = Object.keys(newData).map(function(k) { return newData[k] });
+                console.log(cancelOption);
             } else {
                 var error_msg = '<p class="errtip">	<strong>Error</strong>：' + data.reason + '</p>';
                 $(".err-msg").html(error_msg);
             }
-            liveChart.setOption(liveOption);
+            cancelChart.setOption(cancelOption);
         }
 
     });
+
+
+
 
     var consumptionOption = {
         tooltip: {
@@ -163,7 +175,7 @@
         legend: {
             orient: 'vertical',
             x: 'left',
-            data:['Member Card','Cash','Credit Card']
+            data:['balance','cash','alipay']
         },
         series: [
             {
@@ -190,9 +202,9 @@
                     }
                 },
                 data:[
-                    {value:335, name:'Member Card'},
-                    {value:310, name:'Cash'},
-                    {value:234, name:'Credit Card'}
+                    {value:335, name:'balance'},
+                    {value:310, name:'cash'},
+                    {value:234, name:'alipay'}
                 ]
             }
         ]
@@ -200,7 +212,7 @@
 
     consumptionChart.setOption(consumptionOption);
     $.ajax({
-        url: '/hotel/consumptionStatus',
+        url: '/site/consumption',
         data: '',
         dataType: 'json',
         success: function (data) {
