--- a/src/main/resources/templates/member/index.html
+++ b/src/main/resources/templates/member/index.html
@@ -47,9 +47,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <!--th:href里面的是网页url地址-->
-                <li><a href="redirect:/site/index.html" th:href="@{/site/index}">Site</a></li>
-                <li class="active"><a href="index.html" th:href="@{index}">Records</a></li>
-                <li><a href="profile.html" th:href="@{profile}">Profile</a></li>
+                <li><a href="redirect:/site/index.html" th:href="@{/site/index}">场馆</a></li>
+                <li class="active"><a href="index.html" th:href="@{index}">我的订票</a></li>
+                <li><a href="profile.html" th:href="@{profile}">个人信息</a></li>
 
             </ul>
 
@@ -60,8 +60,8 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Welcome <span th:text="${userID}">Smith</span><span class="caret" ></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../account/index.html" th:href="@{/user/logout}">Sign out</a></li>
-                        <li><a href="../account/register.html" th:href="@{/user/goRegister}">Register</a></li>
+                        <li><a href="../account/index.html" th:href="@{/user/logout}">登出</a></li>
+                        <li><a href="../account/register.html" th:href="@{/user/goRegister}">注册</a></li>
                     </ul>
                 </li>
             </ul>
