--- a/src/main/resources/templates/member/profile.html
+++ b/src/main/resources/templates/member/profile.html
@@ -30,18 +30,18 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="redirect:/site/index.html" th:href="@{/site/index}">Site</a></li>
-                <li><a href="index.html" th:href="@{index}">Records</a></li>
-                <li class="active"><a href="../member/profile.html" th:href="@{profile}">Profile</a></li>
+                <li><a href="redirect:/site/index.html" th:href="@{/site/index}">场馆</a></li>
+                <li><a href="index.html" th:href="@{index}">我的订票</a></li>
+                <li class="active"><a href="../member/profile.html" th:href="@{profile}">个人信息</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Welcome, Smith <span class="caret"></span></a>
+                       aria-expanded="false">Welcome, <span th:text="${userID}">Smith</span><span class="caret" ></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../user/index.html" th:href="@{/user/logout}">Sign out</a></li>
-                        <li><a href="../user/register.html" th:href="@{/user/register}">Register</a></li>
+                        <li><a href="../user/index.html" th:href="@{/user/logout}">登出</a></li>
+                        <li><a href="../user/register.html" th:href="@{/user/register}">注册</a></li>
                     </ul>
                 </li>
             </ul>
