--- a/src/main/resources/templates/site/buyOffline.html
+++ b/src/main/resources/templates/site/buyOffline.html
@@ -143,13 +143,45 @@
 
     </div>
     <div>
-        <a href="javascript:" class="btn btn-primary my-pop-1">新订单</a>
+        <a href="javascript:" class="btn btn-primary my-pop-1">现场购票</a>
+
+        <a href="javascript:" class="btn btn-success my-pop-2" data-toggle="modal"
+           data-target="#pointConvertModal">检票</a>
+    </div>
+</div>
+
+<!--Point Convert内容-->
+<div class="modal fade" id="pointConvertModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">兑换</h4>
+            </div>
+            <form class="form-horizontal" action="buyOffline.html" th:action="@{/site/check}" method="post">
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="recordID" class="col-sm-2 control-label">票据ID</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="recordID" id="recordID"
+                                   placeholder=" "/>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary convert">确定</button>
+                </div>
+            </form>
+            <div class="err-msg"></div>
+        </div>
+
     </div>
 
 </div>
 
-
-<!--取消-->
+<!--退订-->
 <div class="modal fade" id="cancelModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -176,10 +208,10 @@
 
             <div class="err-msg"></div>
         </div>
-
     </div>
-
 </div>
+
+
 
 <div class="cd-user-modal cd-user-modal-1">
     <div class="cd-user-modal-container">
@@ -187,7 +219,7 @@
 
         <div class="panel panel-info">
             <!-- Default panel contents -->
-            <div class="panel-heading">新订单</div>
+            <div class="panel-heading">现场购票</div>
             <form class="form-horizontal" action="index.html">
                 <!--<div class="form-group">-->
 
