--- a/src/main/resources/templates/site/index.html
+++ b/src/main/resources/templates/site/index.html
@@ -26,7 +26,7 @@
 
     <link rel="stylesheet" href="../../static/css/hotel.css" th:href="@{/css/hotel.css}"/>
     <link rel="stylesheet" href="../../static/css/other.css" th:href="@{/css/other.css}"/>
-    <title>Member Index</title>
+    <title>场馆</title>
 </head>
 <body>
 
@@ -49,16 +49,16 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <!--标签栏-->
             <ul class="nav navbar-nav">
-                <li class="active"><a href="../site/index.html" th:href="@{/member/site}">Site<span
+                <li class="active"><a href="../site/index.html" th:href="@{/member/site}">场馆<span
                         class="sr-only">(current)</span></a></li>
-                <li  ><a href="index.html" th:href="@{/member/index}">Records</a></li>
-                <li><a href="../member/profile.html" th:href="@{/member/profile}">Profile</a></li>
+                <li  ><a href="index.html" th:href="@{/member/index}">我的订票</a></li>
+                <li><a href="../member/profile.html" th:href="@{/member/profile}">个人信息</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Welcome, Gakki <span class="caret"></span></a>
+                       aria-expanded="false">Welcome,  <span th:text="${userID}">Smith</span><span class="caret" ></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="../user/index.html" th:href="@{/user/logout}">Sign out</a></li>
                         <li><a href="../user/register.html" th:href="@{/user/register}">Register</a></li>
